@@ -1,5 +1,7 @@
 name = Pod-TreeWalker
 
+source-url = https://github.com/raku-community-modules/Pod-TreeWalker.git
+
 [ReadmeFromPod]
 ; enabled = false
 filename = lib/Pod/TreeWalker.rakumod
@@ -10,4 +12,6 @@ filename = lib/Pod/TreeWalker.rakumod
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test.yml
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
